WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216851
Missing scope release in JSDOMBuiltinConstructorBase
https://bugs.webkit.org/show_bug.cgi?id=216851
Summary
Missing scope release in JSDOMBuiltinConstructorBase
Tadeu Zagallo
Reported
2020-09-22 15:11:36 PDT
<
rdar://problem/69144642
>
Attachments
Patch
(3.76 KB, patch)
2020-09-22 15:16 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.94 KB, patch)
2020-09-23 11:55 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch
(3.99 KB, patch)
2021-03-29 19:55 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch
(4.00 KB, patch)
2021-03-30 08:52 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.60 KB, patch)
2021-03-31 17:46 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2020-09-22 15:16:19 PDT
Created
attachment 409407
[details]
Patch
Yusuke Suzuki
Comment 2
2020-09-22 15:30:27 PDT
Comment on
attachment 409407
[details]
Patch r=me
EWS
Comment 3
2020-09-22 17:33:59 PDT
Found 1 new test failure: js/transform-stream.html
Tadeu Zagallo
Comment 4
2020-09-23 11:55:04 PDT
Created
attachment 409490
[details]
Patch for landing
EWS
Comment 5
2020-09-23 12:35:24 PDT
Committed
r267495
: <
https://trac.webkit.org/changeset/267495
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409490
[details]
.
Yusuke Suzuki
Comment 6
2020-09-23 18:36:17 PDT
Committed
r267512
: <
https://trac.webkit.org/changeset/267512
>
Aakash Jain
Comment 7
2020-09-24 04:43:34 PDT
(In reply to EWS from
comment #5
)
> Committed
r267495
: <
https://trac.webkit.org/changeset/267495
>
js/transform-stream.html was failing since
r267495
(as also warned by EWS) on windows. History:
https://results.webkit.org/?suite=layout-tests&test=js%2Ftransform-stream.html
Yusuke commit in
r267512
moved it to js/dom/transform-stream.html, but it is failing. History:
https://results.webkit.org/?suite=layout-tests&test=js%2Fdom%2Ftransform-stream.html
WebKit Commit Bot
Comment 8
2020-09-24 04:50:20 PDT
Re-opened since this is blocked by
bug 216924
Tadeu Zagallo
Comment 9
2021-03-29 19:55:28 PDT
Created
attachment 424612
[details]
Patch
Tadeu Zagallo
Comment 10
2021-03-30 08:52:10 PDT
Created
attachment 424644
[details]
Patch
Ryosuke Niwa
Comment 11
2021-03-30 18:23:04 PDT
Comment on
attachment 424644
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=424644&action=review
> LayoutTests/ChangeLog:9 > + * js/script-tests/transform-stream.js: Added.
Can we just inline this into transform-stream.html?
> LayoutTests/js/dom/script-tests/transform-stream.js:3 > +description( > +"Tests exception checking in JSDOMBuiltinConstructorBase::callFunctionWithCurrentArguments." > +);
Maybe put ( ~ ) in a single line?
Tadeu Zagallo
Comment 12
2021-03-31 17:46:22 PDT
Created
attachment 424849
[details]
Patch for landing
EWS
Comment 13
2021-03-31 18:38:10 PDT
Committed
r275333
: <
https://commits.webkit.org/r275333
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424849
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug