Missing scope release in JSDOMBuiltinConstructorBase https://bugs.webkit.org/show_bug.cgi?id=216851 <rdar://problem/69144642>

Reviewed by Yusuke Suzuki.

Source/WebCore:

In JSDOMBuiltinConstructorBase::callFunctionWithCurrentArguments, we should release the
ThrowScope before calling into JavaScript since we don't intend to handle the exception.

Test: js/transform-stream.html

* bindings/js/JSDOMBuiltinConstructorBase.cpp:
(WebCore::JSDOMBuiltinConstructorBase::callFunctionWithCurrentArguments):

LayoutTests:

* js/script-tests/transform-stream.js: Added.
* js/transform-stream-expected.txt: Added.
* js/transform-stream.html: Added.


Canonical link: https://commits.webkit.org/229679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267495 268f45cc-cd09-0410-ab3c-d52691b4dbfc