Source/WebCore/bindings/js/JSDOMBuiltinConstructorBase.cpp
@@ -42,6 +42,7 @@ void JSDOMBuiltinConstructorBase::callFunctionWithCurrentArguments(JSC::JSGlobal
         throwOutOfMemoryError(&lexicalGlobalObject, scope);
         return;
     }
+    scope.release();
     JSC::call(&lexicalGlobalObject, &function, callData, &thisObject, arguments);
 }
 
