LayoutTests/js/script-tests/transform-stream.js
@@ -1,0 +1,4 @@
+description(
+"Tests exception checking in JSDOMBuiltinConstructorBase::callFunctionWithCurrentArguments."
+);
+new TransformStream();
